tested ok in embedded tomee
ready for test, i hope