@@ -12,31 +12,26 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <repositories>
-        <repository>
-            <id>jboss</id>
-            <name>jboss repo</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.21.0.1</version>
+            <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.ws.rs/jboss-jaxrs-api_2.0_spec -->
         <dependency>
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
             <version>1.0.1.Final</version>
+            <scope>provided</scope>
         </dependency>
-         <!--https://mvnrepository.com/artifact/org.apache.openejb/tomee-jaxrs--> 
+        <!--https://mvnrepository.com/artifact/org.apache.openejb/tomee-jaxrs--> 
         <dependency>
-            <groupId>org.apache.openejb</groupId>
+            <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-jaxrs</artifactId>
-            <version>1.7.5</version>
+            <version>7.0.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -45,22 +40,23 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-embedded</artifactId>
-            <version>8.0.0</version>
-            <type>jar</type>
-        </dependency>-->
+            <version>7.0.4</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>8.0</version>
+            <version>7.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
@@ -70,6 +66,7 @@
             <version>4.0.0</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -85,10 +82,11 @@
                     </compilerArguments>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -110,21 +108,23 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.0</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+			
             <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>1.7.1</version>
+                <groupId>org.apache.tomee.maven</groupId>
+                <artifactId>tomee-embedded-maven-plugin</artifactId>
+                <version>7.0.4</version>
                 <configuration>
-                    <tomeeVersion>8.0.0</tomeeVersion>
-                    <tomeeClassifier>plume</tomeeClassifier>
+                    <tomeeversion>7.0.4</tomeeversion>
+                    <tomeeclassifier>plume</tomeeclassifier>
                     <tomeeHost>localhost</tomeeHost>
                     <tomeeHttpPort>8080</tomeeHttpPort>
                     <path>/Deploy</path>
@@ -134,8 +134,52 @@
                     <webapps>
                         <webapp>com.Dotson:Dotson:1.0-SNAPSHOT?name=Dotson</webapp>
                     </webapps>
+                    <systemProperties>
+                        <systemVariables>
+                            <openejb.system.apps>true</openejb.system.apps>
+                            <tomee.serialization.class.blacklist>-</tomee.serialization.class.blacklist>
+                        </systemVariables>
+                    </systemProperties>
+                    <synchronization>
+                        <extensions>
+                            <!-- To update each time app built with mvn compile -->
+                            <extension>.class</extension>
+                            <extension>.properties</extension>
+                            <extension>.css</extension>
+                        </extensions>
+                        <updateInterval>2</updateInterval>
+                    </synchronization>
+                    <!-- For some reason, must to be false or reloading does not work! -->
+                    <!-- <reloadOnUpdate>false</reloadOnUpdate> -->
+                    <warFile>
+                        ${project.build.directory}/${project.build.finalName}
+                    </warFile>
+                    <!-- path used by tomEE in the tomee:deploy and tomee:undeploy goals -->
+                    <path>
+                        ${project.build.directory}/apache-tomee/webapps${project.build.finalName}
+                    </path>
+                    <args>
+                        -Dfile.encoding=UTF-8 -server
+                        -Xms128m -Xmx4096m -XX:PermSize=196m -XX:MaxPermSize=128m
+                        -XX:+DisableExplicitGC</args>
+                    <libs>
+                        <!-- <lib> -->
+                        <!-- mysql:mysql-connector-java:${mysql-connector-version} -->
+                        <!-- </lib> -->
+                    </libs>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.tomee</groupId>
+                        <artifactId>apache-tomee</artifactId>
+                        <version>7.0.4</version>
+                        <classifier>plume</classifier>
+                        <type>zip</type>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
